--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "momo",
+  "name": "easy-momo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
